# RTv1

./: .foto4ka  CMakeLists.txt  Makefile  README.md  RTv1  RTv1.h  author  camera.c  camera_create.c  camera_update.c  camera_validate.c  color.c  create_geometric_values.c  create_objects.c  create_types.c  draw.c  etc_1.c  etc_2.c  extra.c  fill_objects.c  geometric_create.c  intersect_objects.c  keys.c  light_create.c  light_update.c  light_validate.c  lighting.c  main.c  matrix.c  objects_calculate.c  objects_create.c  objects_fill.c  objects_intersect.c  objects_update.c  objects_update_min.c  objects_validate.c  operations.c  operations_d.c  operations_v.c  primary_ray.c  (+6 more)
RTv1.dSYM/Contents/Resources/DWARF/: RTv1
libft/: Makefile  README.md  author  ft_atof.c  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_clean.c  ft_del.c  ft_free_all.c  ft_gc.c  ft_gc.h  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstadd_back.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_malloc.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_print.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  (+35 more)
scenes/: 4_cone.cfg  4_cylinder.cfg  4_plane.cfg  4_sphere.cfg  5_rotation.cfg  5_translation.cfg  6_2.cfg  7_1.cfg  7_2.cfg  7_3.cfg  7_4.cfg  8_2.cfg  9_1.cfg  9_2.cfg  basic_shapes_cone_i.cfg  basic_shapes_cylinder_i.cfg  basic_shapes_cylinder_ii.cfg  basic_shapes_plane.cfg  basic_shapes_sphere.cfg  camera_rotation.cfg  etc_2.cfg  etc_3.cfg  etc_4.cfg  etc_5.cfg  etc_6.cfg  etc_7.cfg  etc_8.cfg  etc_9.cfg  multi_obj.cfg  scene_1  scene_1.cfg  scene_2.cfg  scene_2_cone_inside.cfg  scene_3_translate.cfg  scene_4_rotation.cfg  scene_5.cfg
